<resources>
    <string name="app_name">MaheshStores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="stext">Select your role</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_id">Login ID</string>
    <string name="pass_word">password</string>
    <string name="log_in">Log In</string>
    <string name="search">Search by</string>
    <string name="_search">Search</string>
    <string name="roll">Enter Roll No</string>
    <string name="comp">Enter Component Name</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="in_roll">Invalid Roll No.</string>
    <string-array name="Options">
        <item>Roll No</item>
        <item>Component</item>

    </string-array>
</resources>