<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".introduction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/Select_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stext"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/admin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            app:layout_constraintBaseline_toBaselineOf="@+id/user_button"
            app:layout_constraintStart_toStartOf="@+id/Select_id" />

        <Button
            android:id="@+id/user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:text="@string/user"
            app:layout_constraintEnd_toEndOf="@+id/Select_id"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/admin_button"
            app:layout_constraintTop_toBottomOf="@+id/Select_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>